tests/snapshots/run_wpt_conformance__coreml_reduceMin_float16_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float16 1D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceMinInput' must be of rank 2, instead got a multi-array value of rank 1.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f16[24];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
