tests/snapshots/run_wpt_conformance__coreml_reduceMin_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float16 5D tensor default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceMinInput' must be of rank 3, instead got a multi-array value of rank 5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f16[2, 1, 4, 1, 3];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
