tests/snapshots/run_wpt_conformance__coreml_reduceMin_float32_4D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_min.https.any.js reduceMin float32 4D tensor options.keepDimensions=false, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceMinInput' must be of rank 3, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMinInput: f32[2, 2, 2, 3];
  }

  nodes {
    [reduceMinOutput] = reduceMin(reduceMinInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceMinOutput; }
}
